client/src/components/footer.css
.Footer{
    border-top-style: solid;
    border-top-color: #f7f7f7;
}

.rocket{
    width: 45px;
    height: 7.2vh;
}

.Footer-wrapper{
    margin: 4em;
    margin-top: 8em;
    position: absolute;

}

.Content-wrapper{
    display: flex;
    flex-direction: row;
}

.Text-wrapper{
display: flex;
flex-direction: row;
margin-left: 2em;
}

.Footer-content{
font-size: 18px;
font-weight: 800;
margin-bottom: 1em;
}

.Cat-two{
margin-left: 2em;

}

#SummerPrograms{
    margin-bottom: 1em;

}

#Scholarships{
    margin-bottom: 1em;
}

#Resources{
    margin-bottom: 1em;

}

#feedback{
  margin-bottom: 1em;
}




.Footer-bottom-wrapper{
    display: grid;
    margin-top: 2em;
    font-size: 16px;
    grid-template-columns: [firstC] 85% [secondC] 15% ;
    grid-template-rows: [firstR] 50% [secondR] 50%;

}

.Footer-bottom-contact{
    justify-self: right;
}


@media screen and (max-width: 500px){

    .Footer-wrapper{
        margin-left: 2em;
        margin-right: 2em;
        margin-top: 4em;
       

    }

    .Content-wrapper{
        flex-direction: column;
    }

    .Text-wrapper{
        margin-left: 0;
    }

    .rocket{
        width: 40px;
        margin-bottom: 2em;
    }

    .Footer-bottom-contact{
        grid-row-start: secondR;
        grid-row-end: secondR;
        justify-self: left;
        margin-top: 1em;

    }

    
}

